kubernetes/platform/cilium/app/components/hubble/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-httproute
spec:
  parentRefs:
    - name: kube-gateway
  hostnames: ["hubble.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
